--- a/app/src/main/res/layout/session_list.xml
+++ b/app/src/main/res/layout/session_list.xml
@@ -4,4 +4,9 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:id="@+id/header_container"></FrameLayout>
+
 </LinearLayout>
