--- a/app/src/main/res/layout/activity_customer_page.xml
+++ b/app/src/main/res/layout/activity_customer_page.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -9,8 +10,51 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:id="@+id/header_container"></FrameLayout>
+        android:id="@+id/header_container"
+        tools:layout="@layout/fragment_header"></FrameLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="@dimen/screen_margin">
+
+        <ImageView
+            android:contentDescription="@string/photoDescription"
+            android:layout_width="180dp"
+            android:layout_height="135dp"
+            android:id="@+id/customer_photo_imageview"
+            android:background="@color/colorCustomerImage"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                tools:text="First Name"
+                android:id="@+id/first_name_textview"
+                android:layout_marginBottom="5dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginStart="25dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                tools:text="Last Name"
+                android:id="@+id/last_name_textview"
+                android:layout_marginLeft="25dp"
+                android:layout_marginStart="25dp"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <!-- Content Layout -->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -18,8 +62,11 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/customer_list_container"></FrameLayout>
+            android:id="@+id/session_list_container">
 
+        </FrameLayout>
+
+        <!-- Material Design Button -->
         <com.getbase.floatingactionbutton.FloatingActionsMenu
             android:id="@+id/fab"
             android:layout_width="wrap_content"
@@ -37,20 +84,29 @@
             android:layout_marginEnd="12dp">
 
             <com.getbase.floatingactionbutton.FloatingActionButton
-                android:id="@+id/action_new_customer"
+                android:id="@+id/action_edit_customer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 fab:fab_colorNormal="@color/colorBlackSemiTransparent"
-                fab:fab_title="Add New Customer"
+                fab:fab_title="Edit Customer"
                 fab:fab_colorPressed="@color/colorAccent"
                 fab:fab_size="mini"/>
 
             <com.getbase.floatingactionbutton.FloatingActionButton
-                android:id="@+id/action_session_list"
+                android:id="@+id/action_new_session"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 fab:fab_colorNormal="@color/colorBlackSemiTransparent"
-                fab:fab_title="Session List"
+                fab:fab_title="Create New Session"
+                fab:fab_colorPressed="@color/colorAccent"
+                fab:fab_size="mini"/>
+
+            <com.getbase.floatingactionbutton.FloatingActionButton
+                android:id="@+id/action_remove_customer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                fab:fab_colorNormal="@color/colorBlackSemiTransparent"
+                fab:fab_title="Remove Customer"
                 fab:fab_colorPressed="@color/colorAccent"
                 fab:fab_size="mini"/>
 
