--- a/app/src/main/res/layout/customer_list_fragment.xml
+++ b/app/src/main/res/layout/customer_list_fragment.xml
@@ -4,9 +4,9 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <FrameLayout
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:id="@+id/header_container"></FrameLayout>
+        android:layout_height="match_parent"
+        android:id="@+id/customer_list_fragment"/>
 
 </LinearLayout>
